Fix iOS safari layout bug

--- a/global.css
+++ b/global.css
@@ -87,7 +87,7 @@ h1::after {
 canvas {
   position: absolute;
   left: 0;
-  top: 3em;
+  top: 6vh;
   z-index: -1;
   width: 100%;
   height: 68vh;
